# Arbitrage

./: .arbitrage_manager_state.json  .gitignore  Dockerfile  Makefile  README.md  SYSTEM_FLOW.md  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_launcher.cmd  start_launcher.sh  start_launcher.vbs  test_sticky.html  ответ биржи MEXC.txt
arbitrage_bot/: __init__.py  bootstrap.py
arbitrage_bot/config/: __init__.py  loader.py  models.py
arbitrage_bot/core/: __init__.py  app_runner.py  exceptions.py  http.py  logging.py  port_cleanup.py
arbitrage_bot/exchanges/: __init__.py  base.py  bitget.py  bybit.py  kucoin.py  mexc.py  okx.py
arbitrage_bot/services/: __init__.py  arbitrage_engine.py  fee_fetcher.py  market_discovery.py  quote_aggregator.py  quote_store.py  schemas.py  telegram_notifier.py
arbitrage_bot/web/: app.py
arbitrage_bot/web/static/css/: main.css
arbitrage_bot/web/static/js/: app.js
arbitrage_bot/web/templates/: index.html
config/: config.example.yaml
docs/: LOADING_CYCLE.md  TODO.md  arbitrage_bot_TZ.md
installer/: install_linux.sh  install_macos.sh  install_windows.ps1
launcher/: README.md  arbitrage_launcher.py  arbitrage_manager.py
tests/: test_arbitrage_engine.py  test_market_discovery.py
